# admin-service/model/hospital.go
@@ -1,0 +1,13 @@
+package model
+
+import (
+	"gorm.io/gorm"
+)
+
+type Hospital struct {
+	gorm.Model
+	Name       string
+	Number     string
+	Address    string
+	RegionCode string `gorm:"index"`
+}
